--- a/index.html
+++ b/index.html
@@ -3,36 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>SK</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <div class="container">
         <h1>SK</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Brief description about yourself.</p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>List of your projects.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Your contact information.</p>
-        </section>
-    </main>
-    <footer>
-        <p>© 2024 SK</p>
-    </footer>
+        <p>Professor HTL STEYR</p>
+        <h2>Contact</h2>
+        <p>Schlüsselhofgasse 63, 4400 Steyr</p>
+        <p>Email: stefan.klaner@htl-steyr.ac.at</p>
+    </div>
 </body>
 </html>
+
