--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="sidebar">
+        <h2>Navigation</h2>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Teaching</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+    <div class="content">
         <h1>SK</h1>
         <p>Professor HTL STEYR</p>
         <h2>Contact</h2>
-        <p>Schlüsselhofgasse 63, 4400 Steyr</p>
+        <p>Schlüsselhofgasse 63, 4400 STEYR</p>
         <p>Email: stefan.klaner@htl-steyr.ac.at</p>
     </div>
 </body>
 </html>
+
 
