--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="stylesheet" href="boyd.css" type="text/css" />
-<title>Stephen P. Boyd</title>
+<title>SK</title>
 <script type="text/javascript" src="https://me.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=KFL37ttrIkVUc8bNILb39pKDBnux-cvD8vP-Om7MttY9k8SgVJZTQKaxzFIbu9ct5OxUpOVx7gGgXrhQkw5G0w" charset="UTF-8"></script></head>
 <body>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
@@ -50,7 +50,7 @@ Professor in the HTL STEYR
 <p><a href="https://www.htl-steyr.ac.at/">Schlüsselhofgasse 63</a>,
 4400 Steyr<br />
 <a href="mailto:stefan.klaner@htl-steyr.ac.at">stefan.klaner@htl-steyr.ac.at</a><br />
-<h2>Schedule</h2>
+
 
 
 
