--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ urchinTracker();
 <h1>SK</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="stephen_boyd3.jpg" alt="450" width="300px" height="Stephen Boyd photo" />&nbsp;</td>
-<td align="left"><p>Stephen P. Boyd<br />
+<img src="https://www.htl-steyr.ac.at/images/htl-steyr.jpg" alt="450" width="300px" height="HTL-STEYR" />&nbsp;</td>
+<td align="left"><p>HTL STEYR<br />
 Professor in the HTL STEYR
 
 
