--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ urchinTracker();
 <h1>SK</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="https://www.htl-steyr.ac.at/images/htl-steyr.jpg" alt="450" width="300px" height="200" />&nbsp;</td>
+<img src="https://www.htl-steyr.ac.at/images/htl-steyr.jpg" alt="HTL Steyr" width="300px" height="200" />&nbsp;</td>
 <td align="left"><p>HTL STEYR<br />
 Professor in the HTL STEYR
 
