--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ urchinTracker();
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="bio.html">Biography</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="notes.html">Books</a></div>
+<div class="menu-item"><a href="notes.html">Notes</a></div>
 <div class="menu-item"><a href="software.html">Software</a></div>
-<div class="menu-category">Classes</div>
+
 
 </td>
 <td id="layout-content">
