--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Professor in the HTL STEYR
 
 </td></tr></table>
 <h2>Contact</h2>
-<p><a href="https://www.htl-steyr.ac.at/">Schlüsselhofgasse 63</a>,
+<p><a href="https://www.htl-steyr.ac.at/">HTL STEYR</a>, Schlüsselhofgasse 63,
 4400 Steyr<br />
 <a href="mailto:stefan.klaner@htl-steyr.ac.at">stefan.klaner@htl-steyr.ac.at</a><br />
 
