--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="w3-container w3-teal w3-center w3-padding-32">
         <h1>Stefan Klaner</h1>
         <p>Professor HTL STEYR</p>
-        <img src="https://webmail.htl-steyr.ac.at/horde/gollem/view.php?type=jpg&file=farb_jpg.jpg&dir=%2FFormatvorlagen%26Logo%2FLogo&driver=smb&uniq=1730321893889" alt="HTL Steyr Logo" class="logo w3-image">
+        <img src="farb_jpg.jpg" alt="HTL Steyr Logo" class="logo w3-image">
     </header>
 
     <nav class="w3-bar w3-teal">
