--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="w3-container w3-teal w3-center w3-padding-32">
         <h1>Stefan Klaner</h1>
         <p>Professor HTL STEYR</p>
-        <img src="farb_jpg.jpg" alt="HTL Steyr Logo" class="logo w3-image">
+        <img src="farb_jpg.jpg" alt="HTL Steyr" width="300px" height="200" class="logo w3-image">
     </header>
 
     <nav class="w3-bar w3-teal">
