--- a/index.html
+++ b/index.html
@@ -22,13 +22,25 @@
     </header>
 
     <nav class="w3-bar w3-teal">
-        <a href="#home" class="w3-bar-item w3-button">Home</a>
-        <a href="#teaching" class="w3-bar-item w3-button">Teaching</a>
-        <a href="#biography" class="w3-bar-item w3-button">Biography</a>
-        <a href="#notes" class="w3-bar-item w3-button">Notes</a>
-        <a href="#software" class="w3-bar-item w3-button">Software</a>
+    <a href="#home" class="w3-bar-item w3-button">Home</a>
+    <a href="#teaching" class="w3-bar-item w3-button">Teaching</a>
+    <a href="#biography" class="w3-bar-item w3-button">Biography</a>
+    <a href="#notes" class="w3-bar-item w3-button">Notes</a>
+    <a href="#software" class="w3-bar-item w3-button">Software</a>
+    <div class="w3-dropdown-hover">
+        <button class="w3-button">Teaching</button>
+        <div class="w3-dropdown-content w3-bar-block w3-border">
+            <a href="am1.html" class="w3-bar-item w3-button">AM1</a>
+            <a href="am2.html" class="w3-bar-item w3-button">AM2</a>
+            <a href="am3.html" class="w3-bar-item w3-button">AM3</a>
+            <a href="am4.html" class="w3-bar-item w3-button">AM4</a>
+            <a href="am5.html" class="w3-bar-item w3-button">AM5</a>
+        </div>
+    </div>
+
+
         
-    </nav>
+ </nav>
 
     <main class="w3-container w3-padding-32">
         <section id="contact" class="w3-card-4 w3-margin w3-padding">
