--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <nav class="w3-bar w3-teal">
-    <a href="#home" class="w3-bar-item w3-button">Home</a>
+    <a href="index.html" class="w3-bar-item w3-button">Home</a>
     <div class="w3-dropdown-hover">
         <button class="w3-button">Teaching</button>
         <div class="w3-dropdown-content w3-bar-block w3-border">
