--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="am5.html" class="w3-bar-item w3-button">AM5</a>
         </div>
     </div>
-    <a href="#biography" class="w3-bar-item w3-button">Biography</a>
+    <a href="biography.html" class="w3-bar-item w3-button">Biography
     <a href="#notes" class="w3-bar-item w3-button">Notes</a>
     <a href="#software" class="w3-bar-item w3-button">Software</a>
     
