--- a/biography.html
+++ b/biography.html
@@ -19,7 +19,7 @@
         </section>
     </main>
     <footer class="w3-container w3-teal w3-center w3-padding-16">
-        <p>&copy; 2023 Stefan Klaner. All rights reserved.</p>
+        <p>Seite erstellt; 2024 Stefan Klaner. All rights reserved.</p>
     </footer>
 </body>
 </html>
