--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </section>
     </main>
 
-    <footer class="w3-container w3-teal w3-center w3-padding-16">
-       
+     <footer class="w3-container w3-teal w3-center w3-padding-16">
+        <p>Seite erstellt; 2024 Stefan Klaner. All rights reserved.</p>
     </footer>
 
 </body>
