--- a/biography.html
+++ b/biography.html
@@ -33,7 +33,10 @@
     <main class="w3-container w3-padding-32">
         <section class="w3-card-4 w3-margin w3-padding">
             <h2>Biography</h2>
-            <p>Stefan Klaner is a professor at HTL Steyr with a passion for teaching and innovation in the field of technology. He has dedicated his career to educating future engineers and inspiring a love for learning.</p>
+            <p>HTL Steyr: Matura 2009
+            <p>Universität Salzburg: Mag.rer.nat. 2016 UF Mathematik / Bewegung und Sport
+                
+            <p>Stefan Klaner is a professor at HTL Steyr with a passion for teaching and innovation in the field of technology. He has dedicated his career to educating future engineers.</p>
         </section>
         <a href="index.html" class="back-button">Back to Main Page</a>
     </main>
