--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 </head>
 <body>
 
-    <header class="w3-container w3-teal w3-center w3-padding-32">
-        <h1>Stefan Klaner</h1>
-        <p>Professor HTL STEYR</p>
-        <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
-    </header>
+   <header class="w3-container w3-teal w3-center w3-padding-32 header-container">
+    <h1>Stefan Klaner</h1>
+    <p>Professor HTL STEYR</p>
+    <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
+</header>
+
 
     <nav class="w3-bar w3-teal">
     <a href="index.html" class="w3-bar-item w3-button">Home</a>
