--- a/biography.html
+++ b/biography.html
@@ -33,8 +33,8 @@
     <main class="w3-container w3-padding-32">
         <section class="w3-card-4 w3-margin w3-padding">
             <h2>Biography</h2>
-            <p>HTL Steyr: Matura 
-            <p>Universität Salzburg: Mag.rer.nat.: UF Mathematik / Bewegung und Sport
+            <p><b>HTL Steyr:</b> Matura 
+            <p><b>Universität Salzburg:</b> Mag.rer.nat.: UF Mathematik / Bewegung und Sport
                 
             <p>Stefan Klaner is a professor at HTL Steyr with a passion for teaching and innovation in the field of technology. He has dedicated his career to educating future engineers.</p>
         </section>
