--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <a href="biography.html" class="w3-bar-item w3-button">Biography
     <a href="#notes" class="w3-bar-item w3-button">Notes</a>
     <a href="#software" class="w3-bar-item w3-button">Software</a>
+    <a href="blog.html" class="w3-bar-item w3-button">Blog</a>
     
 
 
