--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,7 @@
                 <p>Hier sollte einmal ein Post stehen.</p>
             </article>
         </section>
+        <a href="index.html" class="back-button">Back to Main Page</a>
     </main>
     <footer class="w3-container w3-teal w3-center w3-padding-16">
         <p>Seite erstellt: 2024 Stefan Klaner. All rights reserved.</p>
