--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,44 @@
     <title>Blog</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
+        .blog-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .blog-card {
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin: 20px;
+            max-width: 400px;
+            overflow: hidden;
+            transition: transform 0.2s;
+        }
+
+        .blog-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .blog-card img {
+            width: 100%;
+            height: auto;
+        }
+
+        .blog-card h3 {
+            padding: 20px;
+            margin: 0;
+            font-size: 1.5em;
+            color: #333;
+        }
+
+        .blog-card p {
+            padding: 0 20px 20px;
+            color: #777;
+            line-height: 1.6;
+        }
+
         .back-button {
             display: block;
             width: fit-content;
@@ -31,18 +69,24 @@
         <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
     </header>
     <main class="w3-container w3-padding-32">
-        <section class="w3-card-4 w3-margin w3-padding">
-            <h2>Blog</h2>
-            <article class="w3-margin-bottom">
-                <h3>Blog Title</h3>
-                <p>Hier sollte einmal ein Post stehen.</p>
-            </article>
+        <section class="blog-container">
+            <div class="blog-card">
+                <img src="blog_image_1.jpg" alt="Blog Image 1">
+                <h3>Blog Post Title 1</h3>
+                <p>Short excerpt of the blog post. This gives readers an idea of what the post is about.</p>
+            </div>
+            <div class="blog-card">
+                <img src="blog_image_2.jpg" alt="Blog Image 2">
+                <h3>Blog Post Title 2</h3>
+                <p>Short excerpt of the blog post. This gives readers an idea of what the post is about.</p>
+            </div>
+            <!-- Add more blog cards as needed -->
         </section>
         <a href="index.html" class="back-button">Back to Main Page</a>
     </main>
     <footer class="w3-container w3-teal w3-center w3-padding-16">
         <p>Seite erstellt: 2024 Stefan Klaner. All rights reserved.</p>
-       
     </footer>
 </body>
 </html>
+
