--- a/blog.html
+++ b/blog.html
@@ -7,15 +7,25 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
     .twitter-widget-container {
-        max-width: 400px;
+        max-width: 100%;
         margin: 20px auto;
         border: 1px solid #e1e8ed;
         border-radius: 10px;
         padding: 10px;
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         text-align: center;
+        overflow: hidden;
+    }
+
+    @media only screen and (max-width: 600px) {
+        .twitter-widget-container {
+            padding: 5px;
+            border: none;
+            box-shadow: none;
         }
-    </style>
+    }
+</style>
+
 
     <style>
         .blog-container {
@@ -86,6 +96,7 @@
                 <a class="twitter-timeline" href="https://twitter.com/YourUsername">Tweets by YourUsername</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
+
 
             <div class="blog-card">
                 <img src="blog_image_1.jpg" alt="Blog Image 1">
