--- a/index.html
+++ b/index.html
@@ -6,75 +6,88 @@
     <title>Stefan Klaner</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
+    .logo {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+
+    @media only screen and (max-width: 600px) {
         .logo {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-
-        @media only screen and (max-width: 600px) {
-            .logo {
-                position: static;
-                margin: 10px auto;
-                display: block;
-            }
-
-            header h1 {
-                font-size: 1.5em;
-            }
-
-            .header-container {
-                text-align: center;
-            }
-        }
-
-        .container {
-            display: flex;
-        }
-
-        .sidebar {
-            width: 200px;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 0;
-            padding-top: 20px;
-            background-color: #009688;
-            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-        }
-
-        .sidebar a,
-        .accordion-button {
-            padding: 15px;
-            text-decoration: none;
-            color: white;
+            position: static;
+            margin: 10px auto;
             display: block;
-            cursor: pointer;
-            background-color: inherit;
-            border: none;
-            text-align: left;
-            outline: none;
-            font-size: 1em;
-            transition: background-color 0.3s;
         }
 
-        .accordion-button:hover {
-            background-color: #00796b;
+        header h1 {
+            font-size: 1.5em;
         }
 
-        .accordion-content {
-            background-color: #f9f9f9;
-            display: none;
-            overflow: hidden;
-            transition: max-height 0.2s ease-out;
+        .header-container {
+            text-align: center;
+        }
+    }
+
+    .container {
+        display: flex;
+    }
+
+    .sidebar {
+        width: 20%;
+        min-width: 150px;
+        max-width: 300px;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding-top: 20px;
+        background-color: #009688;
+        box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    }
+
+    .sidebar a,
+    .accordion-button {
+        padding: 15px;
+        text-decoration: none;
+        color: white;
+        display: block;
+        cursor: pointer;
+        background-color: inherit;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 1em;
+        transition: background-color 0.3s;
+    }
+
+    .accordion-button:hover {
+        background-color: #00796b;
+    }
+
+    .accordion-content {
+        background-color: #f9f9f9;
+        display: none;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
+    }
+
+    .content {
+        margin-left: 20%;
+        padding: 20px;
+        flex: 1;
+    }
+
+    @media only screen and (max-width: 600px) {
+        .sidebar {
+            width: 40%;
         }
 
         .content {
-            margin-left: 200px;
-            padding: 20px;
-            flex: 1;
+            margin-left: 40%;
         }
-    </style>
+    }
+</style>
+
 </head>
 <body>
     <div class="container">
