--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
 
     @media only screen and (max-width: 600px) {
         .sidebar {
-            width: 30%;
+            width: 30%; /* Adjusted width for smartphones */
         }
 
         .content {
-            margin-left: 30%;
+            margin-left: 30%; /* Adjusted margin for content */
         }
     }
 </style>
+
 
 </head>
 <body>
