--- a/biography.html
+++ b/biography.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biography</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-   
 </head>
 <body>
     <header class="w3-container w3-teal w3-center w3-padding-32">
@@ -16,12 +15,10 @@
     <main class="w3-container w3-padding-32">
         <section class="w3-card-4 w3-margin w3-padding">
             <h2>Biography</h2>
-            <p><b>HTL Steyr:</b> Matura 
-            <p><b>Universität Salzburg:</b> Mag.rer.nat.: UF Mathematik / Bewegung und Sport
-                
+            <p><b>HTL Steyr:</b> Matura</p>
+            <p><b>Universität Salzburg:</b> Mag.rer.nat.: UF Mathematik / Bewegung und Sport</p>
             <p>Stefan Klaner is a professor at HTL Steyr with a passion for teaching and innovation in the field of technology. He has dedicated his career to educating future engineers.</p>
         </section>
-        
     </main>
     <footer class="w3-container w3-teal w3-center w3-padding-16">
         <p>Seite erstellt: 2024 Stefan Klaner. All rights reserved.</p>
