--- a/biography.html
+++ b/biography.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biography</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+        .back-button {
+            display: block;
+            width: fit-content;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #009688;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+
+        .back-button:hover {
+            background-color: #00796b;
+        }
+    </style>
 </head>
 <body>
     <header class="w3-container w3-teal w3-center w3-padding-32">
@@ -19,11 +37,13 @@
             <p><b>Universität Salzburg:</b> Mag.rer.nat.: UF Mathematik / Bewegung und Sport</p>
             <p>Stefan Klaner is a professor at HTL Steyr with a passion for teaching and innovation in the field of technology. He has dedicated his career to educating future engineers.</p>
         </section>
+        <a href="index.html" class="back-button">Back to Main Page</a>
     </main>
     <footer class="w3-container w3-teal w3-center w3-padding-16">
         <p>Seite erstellt: 2024 Stefan Klaner. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
 
 
