--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,24 @@
     <title>Stefan Klaner</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
+        
+        .back-button {
+            display: block;
+            width: fit-content;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #009688;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+
+        .back-button:hover {
+            background-color: #00796b;
+        }
+    
         .logo {
             position: absolute;
             top: 10px;
