--- a/index.html
+++ b/index.html
@@ -3,68 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stefan Klaner</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title>Stefan Klaner - Applied Math and Engineering</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap">
     <style>
-        .logo {
-            position: absolute;
-            top: 10px;
-            right: 10px;
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
 
-        @media only screen and (max-width: 600px) {
-            .logo {
-                position: static;
-                margin: 10px auto;
-                display: block;
-            }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
 
-            header h1 {
-                font-size: 1.5em;
-            }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
 
-            .header-container {
-                text-align: center;
-            }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #444;
+            padding: 10px 0;
+        }
+
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+
+        main {
+            margin-top: 20px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        .profile-pic {
+            max-width: 150px;
+            margin: 20px auto;
+            display: block;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .section {
+            margin: 20px 0;
+        }
+
+        .section h2 {
+            margin-top: 0;
+        }
+
+        .back-button {
+            display: block;
+            width: fit-content;
+            margin: 20px auto;
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+
+        .back-button:hover {
+            background-color: #444;
         }
     </style>
 </head>
 <body>
-    <header class="w3-container w3-teal w3-center w3-padding-32 header-container">
+    <header class="container">
         <h1>Stefan Klaner</h1>
-        <p>Professor HTL STEYR</p>
-        <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
+        <p>Professor of Applied Math and Engineering</p>
+        <img src="profile.jpg" alt="Stefan Klaner" class="profile-pic">
     </header>
-    <nav class="w3-bar w3-teal">
-        <a href="index.html" class="w3-bar-item w3-button">Home</a>
-        <div class="w3-dropdown-hover">
-            <button class="w3-button">Teaching</button>
-            <div class="w3-dropdown-content w3-bar-block w3-border">
-                <a href="am1.html" class="w3-bar-item w3-button">AM1</a>
-                <a href="am2.html" class="w3-bar-item w3-button">AM2</a>
-                <a href="am3.html" class="w3-bar-item w3-button">AM3</a>
-                <a href="am4.html" class="w3-bar-item w3-button">AM4</a>
-                <a href="am5.html" class="w3-bar-item w3-button">AM5</a>
-            </div>
-        </div>
-        <a href="biography.html" class="w3-bar-item w3-button">Biography</a>
-        <a href="#notes" class="w3-bar-item w3-button">Notes</a>
-        <a href="#software" class="w3-bar-item w3-button">Software</a>
-        <a href="blog.html" class="w3-bar-item w3-button">Blog</a>
+    <nav class="container">
+        <a href="index.html">Home</a>
+        <a href="teaching.html">Teaching</a>
+        <a href="biography.html">Biography</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
     </nav>
-    <main class="w3-container w3-padding-32">
-        <section id="contact" class="w3-card-4 w3-margin w3-padding">
+    <main class="container">
+        <section class="section">
+            <h2>Welcome</h2>
+            <p>Welcome to my homepage. I am a professor of Applied Math and Engineering at HTL STEYR. This website provides an overview of my teaching, research, and professional activities.</p>
+        </section>
+        <section class="section" id="contact">
             <h2>Contact</h2>
             <p><a href="https://www.htl-steyr.ac.at/">HTL STEYR</a></p>
             <p>Schlüsselhofgasse 63, 4400 Steyr</p>
             <p>Email: <a href="mailto:stefan.klaner@htl-steyr.ac.at">stefan.klaner@htl-steyr.ac.at</a></p>
         </section>
     </main>
-    <footer class="w3-container w3-teal w3-center w3-padding-16">
+    <footer class="container">
         <p>Seite erstellt: 2024 Stefan Klaner. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
 
 
 
