--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <main class="container">
         <section class="section">
             <h2>Welcome</h2>
-            <p>Welcome to my homepage. I am a professor of Applied Math/Engineering and Physical Education at HTL STEYR. This website provides an overview of my teaching, research, and professional activities.</p>
+            <p>Welcome to my homepage. I am a professor of Applied Math/Engineering and Physical Education at HTL STEYR. This website provides an overview of my teaching and professional activities.</p>
         </section>
         <section class="section" id="contact">
             <h2>Contact</h2>
