--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             color: #fff;
             padding: 20px;
             text-align: center;
+            position: relative;
         }
 
         header h1 {
@@ -39,11 +40,12 @@
             justify-content: center;
             background-color: #444;
             padding: 10px 0;
+            flex-wrap: wrap;
         }
 
         nav a {
             color: #fff;
-            margin: 0 15px;
+            margin: 10px;
             text-decoration: none;
             font-size: 1.2em;
         }
@@ -75,21 +77,16 @@
             margin-top: 0;
         }
 
-        .back-button {
-            display: block;
-            width: fit-content;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
+        @media only screen and (max-width: 600px) {
+            header h1 {
+                font-size: 2em;
+            }
 
-        .back-button:hover {
-            background-color: #444;
+            .logo {
+                position: static;
+                margin: 10px auto;
+                display: block;
+            }
         }
     </style>
 </head>
@@ -107,10 +104,6 @@
         <a href="contact.html">Contact</a>
     </nav>
     <main class="container">
-        <section class="section">
-            <h2>Welcome</h2>
-            <p>Welcome to my homepage. I am a professor of Applied Math/Engineering and Physical Education at HTL STEYR. This website provides an overview of my teaching and professional activities.</p>
-        </section>
         <section class="section" id="contact">
             <h2>Contact</h2>
             <p><a href="https://www.htl-steyr.ac.at/">HTL STEYR</a></p>
@@ -123,6 +116,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
