--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Stefan Klaner</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -12,55 +12,9 @@
             margin: 0;
             padding: 0;
         }
-
-        .container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+        .w3-bar .w3-button {
+            padding: 16px;
         }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            position: relative;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-            padding: 10px 0;
-            flex-wrap: wrap;
-        }
-
-        nav a {
-            color: #fff;
-            margin: 10px;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-
-        main {
-            margin-top: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-        }
-
         .profile-pic {
             max-width: 150px;
             margin: 20px auto;
@@ -68,13 +22,11 @@
             border-radius: 50%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
         .blog-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
         }
-
         .blog-card {
             background: #fff;
             border-radius: 10px;
@@ -84,29 +36,24 @@
             overflow: hidden;
             transition: transform 0.2s;
         }
-
         .blog-card:hover {
             transform: translateY(-10px);
         }
-
         .blog-card img {
             width: 100%;
             height: auto;
         }
-
         .blog-card h3 {
             padding: 20px;
             margin: 0;
             font-size: 1.5em;
             color: #333;
         }
-
         .blog-card p {
             padding: 0 20px 20px;
             color: #777;
             line-height: 1.6;
         }
-
         .back-button {
             display: block;
             width: fit-content;
@@ -116,35 +63,4 @@
             color: #fff;
             text-align: center;
             border-radius: 5px;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-
-        .back-button:hover {
-            background-color: #444;
-        }
-
-        @media only screen and (max-width: 600px) {
-            header h1 {
-                font-size: 2em;
-            }
-
-            .logo {
-                position: static;
-                margin: 10px auto;
-                display: block;
-            }
-        }
-    </style>
-</head>
-<body>
-    <header class="container">
-        <h1>Stefan Klaner</h1>
-        <p>Professor of Applied Math and Engineering</p>
-        <img src="profile.jpg" alt="Stefan Klaner" class="profile-pic">
-    </header>
-    <nav class="container">
-        <a href="index.html">Home</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="biography.html
 
