--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="teaching.html" class="w3-bar-item w3-button">TEACHING</a>
             <a href="biography.html" class="w3-bar-item w3-button">BIOGRAPHY</a>
             <a href="blog.html" class="w3-bar-item w3-button">BLOG</a>
-            <a href="contact.html" class="w3-bar-item w3-button">CONTACT</a>
+            
         </div>
     </div>
 
@@ -57,7 +57,7 @@
     <header class="w3-container w3-center" style="padding:128px 16px; background-color: #333; color: #fff;">
         <h1 class="w3-margin w3-jumbo">Stefan Klaner</h1>
         <p class="w3-xlarge">Professor HTL STEYR</p>
-        <img src="profile.jpg" alt="Stefan Klaner" class="profile-pic">
+        <img src="farb_jpg.jpg" alt="HTL Steyr" width="100px" height="100" class="logo w3-image">
     </header>
 
     <!-- Main Content -->
